--- a/artikel.html
+++ b/artikel.html
@@ -14,19 +14,19 @@
 						<figcaption>Sayur Indonesia</figcaption>
 					</figure>
 					<hgroup>
-						<h2><a href="seledri">Cara Menanam Seledri</a</h2>
-						<h3>Sayuran</h3>
+						<h2><a href="seledri.html">Cara Menanam Seledri</a></h2>
+						<h3 style="color:#47b34f">Sayuran</h3>
 					</hgroup>
 					<p>Tanaman seledri bisa diperbanyak dengan cara generatif maupun vegetatif..</p>
 				</article>    
 				<article>
 					<figure>
 						<img style="width: 220px; height: 210px" src="bayam merah.jpg" alt="bayam merah" />
-						<figcaption>Sayur Indonesia</figcaption>
+						<figcaption style="color:black">Sayur Indonesia</figcaption>
 					</figure>
 					<hgroup>
-						<h2><a href="bayam merah">Cara Menanam Bayam Merah di Polybag</a></h2>
-                        <h3>Sayuran</h3>
+						<h2><a href="bayam merah.html">Cara Menanam Bayam Merah di Polybag</a></h2>
+                        <h3 style="color:#47b34f">Sayuran</h3>
 					</hgroup>
 					<p>Bayam merupakan salah satu jenis sayuran yang banyak digemari oleh masyarakat, hal ini dikarenakan bayam memiliki ..</p>
 				</article>
@@ -36,8 +36,8 @@
 						<figcaption>Buah Indonesia</figcaption>
 					</figure>
 					<hgroup>
-						<h2><a href="">Cara Menanam Pepaya di Pekarangan Rumah</a></h2>
-						<h3>Buah - buahan</h3>
+						<h2><a href="pepaya.html">Cara Menanam Pepaya di Pekarangan Rumah</a></h2>
+						<h3 style="color:#ed7b42">Buah - buahan</h3>
 					</hgroup>
 					<p>Dalam budidaya tanaman pepaya langkah awal yang perlu dilakukan adalah menyiapkan bibit. Bibit pepaya dapat diperoleh ..</p>
 				</article>    
@@ -47,8 +47,8 @@
 						<figcaption>Buah Indonesia</figcaption>
 					</figure>
 					<hgroup>
-						<h2><a href="">Cara Menanam Kelengkeng Merah Dalam Pot</a></h2>
-						<h3>Buah- buahan</h3>
+						<h2><a href="kelengkeng.html">Cara Menanam Kelengkeng Merah Dalam Pot</a></h2>
+						<h3 style="color:#ed7b42">Buah- buahan</h3>
 					</hgroup>
 					<p>Kelengkeng Merah/ Ruby Longan tergolong kelengkeng yang eksklusif, karena memiliki keistimewaan pada tampilannya yang ..</p>
 				</article>
@@ -58,26 +58,26 @@
 						<figcaption>Buah Indonesia</figcaption>
 					</figure>
 					<hgroup>
-						<h2><a href="">Pembibitan Anggur</a></h2>
-						<h3>Buah - buahan</h3>
+						<h2><a href="anggur.html">Pembibitan Anggur</a></h2>
+						<h3 style="color:#ed7b42">Buah - buahan</h3>
 					</hgroup>
 					<p>Pembibitan tanaman anggur dapat dilakukan dengan berbagai cara, baik itu generatif seperti ..</p>
 				</article>
 				<article><article>
 					<figure>
 						<img style="width: 220px; height: 210px" src="kemangi.jpg" alt="seledri" />
-						<figcaption>Sayur Seledri</figcaption>
+						<figcaption>Sayur Indonesia</figcaption>
 					</figure>
 					<hgroup>
 						<h2><a href="kemangi.html">Cara Menanam Kemangi</a></h2>
-						<h3>Sayuran</h3>
+						<h3 style="color:#47b34f">Sayuran</h3>
 					</hgroup>
 					<p>Kemangi adalah salah satu jenis sayuran yang biasanya digunakan daunnya sebagai pelengkap dalam beberapa jenis masakan di Indonesia khususnya.</p>
 				</article>    
 			</section>
 			<aside>
 				<section class="popular-recipes">
-					<h2>Bercocok Tani</h2>
+					<h2 style="color:#f2bb85">Bercocok Tani</h2>
 					<a href="index.html">Home</a>
 					<a href="about.html">About Us</a>
 					<a href="artikel.html">Article</a>
@@ -85,7 +85,9 @@
 				</section>
 			</aside>
 			<footer>
-				&copy; 2015 Warung Tegal
+				<p style="font-size: 40px">&nbsp Bercocok Tani</p>
+				<hr width="100%">
+				<p style="margin-top:18px;margin-left: 18px">© 2019 Farm Indonesia. All Rights Reserved. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp PT. Belajar Tani Agriteknologi Nusantara</p>
 			</footer>
 		</div><!-- .wrapper -->
 	</body>
