--- a/bayam merah.html
+++ b/bayam merah.html
@@ -1,40 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title></title>
+
+    <title>Artikel Belajar Tani</title>
     <link rel="stylesheet" href="kemangi.css">
   </head>
   <body>
-    <div class="all">
-      <div class="kepala">
-        <div class="Judul">
-          <p>
-            <img src="plants.png" alt="" style="left:700px;width:50px;height:50px;">
-            <a href="index.html">Bercocok Tani</a>
-          </p>
-        </div>
-        <div class="menu1">
-          <a href="index.html">Home</a>
-          <a href="about.html">About Us</a>
-          <a href="sayur.html"style="color:#f2bb85;">Artikel</a>
-          <a href="contact.html">Contact Us</a>
-        </div>
-      </div>
-	</head>
-		<div style="color:black" class="wrapper">
-			<section class="courses">
-				<article>
-					<figure>
-						<img style="width:308px;height:245px"src="bayam merah.jpg" alt="" />
-					</figure>
-					<hgroup>
-						<div class="atas">
-						<h2><b>Bayam Merah</b></h2>
-						</div>
-					</hgroup>
-          <div class="isi">
-					<p>Bayam merupakan salah satu jenis sayuran yang banyak digemari oleh masyarakat, hal ini dikarenakan bayam memiliki kandungan vitamin dan mineral yang lengkap diantaranya vitamin A,B,C dan K, selain itu mineral-mineral utama yang dimiliki  bayam adalah magnesium, zat besi, asam folat, kalsium, potasium dan sebagainya.
+    <div class="wrapper">
+      <section class="courses">
+        <article>
+          <figure>
+            <img style="width: 220px; height:210px" src="bayam merah.jpg" alt="bayam merah" />
+          </figure>
+          <hgroup>
+            <h2>Cara Menanam Seledri</h2>
+            <h3 style="color:#47b34f">Sayuran</h3>
+          </hgroup>
+                  <p>Bayam merupakan salah satu jenis sayuran yang banyak digemari oleh masyarakat, hal ini dikarenakan bayam memiliki kandungan vitamin dan mineral yang lengkap diantaranya vitamin A,B,C dan K, selain itu mineral-mineral utama yang dimiliki  bayam adalah magnesium, zat besi, asam folat, kalsium, potasium dan sebagainya.
 Jika anda tertarik untuk membudidayakannya, berikut ini ulasan Cara Menanam Bayam Merah di Polybag :
 Metode penanaman bayam yang akan kita uraikan disini adalah menggunakan metode penanaman organik, dimana sayuran organik ini lebih sehat dan aman untuk dikonsumsi.<p>
 <br><p>1.PERSIAPAN BENIH</p>
@@ -52,21 +34,24 @@ Setelah berumur 1 minggu dari penanaman, benih bayam sudah mulai tumbuh dengan m
 Tanaman bayam merah yang ditanam secara organik sudah dapat dipanen setelah berumur 25 hari dan dilakukan bertahap dengan interval 5 hari sekali.
 Pemanenan sebaiknya dilakukan dengan memetik pucuk-pucuknya saja sehingga tanaman bayam dapat bertunas dan tumbuh lagi.
 Demikianlah ulasan mengenai cara menanam bayam merah di polybag secara organik, semoga artikel ini dapat menambah wawasan dan bermanfaat untuk anda.</p>
-       </article>
+        </article>    
       </section>
-        <div class="kaki">
-          <div class="logo2">
-            Belajar Tani
-          </div>
-          <div class="kontak">
-            <div class="kontak1">
-              © 2019 Farm Indonesia. All Rights Reserved.
-            <div class="info">
-              PT. Belajar Tani Agriteknologi Nusantara
-            </div>
-            </div>
-          </div>
-        </div>
-    </div>
+      <aside>
+        <section class="popular-recipes">
+          <h2> <a href="artikel.html" style="color:#db5656">Article</a></h2>
+          <a href="seledri.html">Cara Menanam Seledri</a>
+          <a style="color:#db5656" href="bayam merah.html">Cara Menanam Bayam Merah di Polybag</a>
+          <a href="Pepaya.html">Cara Menanam Pepaya di Pekarangan Rumah</a>
+          <a href="kelengkeng.html">Cara Menanam Kelengkeng Merah Dalam Pot</a>
+          <a href="anggur.html">Pembibitan Anggur</a>
+          <a href="kemangi.html">Cara Menanam Kemangi</a>
+        </section>
+      </aside>
+      <footer>
+        <p style="font-size: 40px">&nbsp Bercocok Tani</p>
+        <hr width="100%">
+        <p style="margin-top:18px;margin-left: 18px">© 2019 Farm Indonesia. All Rights Reserved. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp PT. Belajar Tani Agriteknologi Nusantara</p>
+      </footer>
+    </div><!-- .wrapper -->
   </body>
 </html>
