--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   </head>
   <body>
     <div class="all">
-      <img src="12.jpg">
       <div class="kepala">
         <div class="Judul">
           <p>
@@ -24,7 +23,24 @@
       <div class="utama">
         <p>"Buah yang manis hanya bisa dipetik dari pemilihan bibit yang baik dan cara menanam yang benar"</p>
       </div>
-        <div class="kaki">
+
+      <div class="cara-kerja"> 
+        <div class="cara-kerja-content">
+          <img src="cari.png">
+          <p>CARI TUTORIAL</p>
+        </div>
+        <div class="cara-kerja-content">
+          <img src="newspaper.png">
+          <p>LIHAT DETAIL</p>
+        </div>
+        <div class="cara-kerja-content">
+          <img src="speed.png">
+          <p> TERAPKAN</p>
+        </div>
+      </div>
+
+      </div>
+<div class="kaki">
           <div class="logo2">
             Belajar Tani
           </div>
@@ -37,6 +53,5 @@
             </div>
           </div>
         </div>
-    </div>
   </body>
 </html>
