--- a/kemangi.html
+++ b/kemangi.html
@@ -1,40 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title></title>
+
+    <title>Artikel Belajar Tani</title>
     <link rel="stylesheet" href="kemangi.css">
   </head>
   <body>
-    <div class="all">
-      <div class="kepala">
-        <div class="Judul">
-          <p>
-            <img src="plants.png" alt="" style="left:700px;width:50px;height:50px;">
-            <a href="index.html">Bercocok Tani</a>
-          </p>
-        </div>
-        <div class="menu1">
-          <a href="index.html">Home</a>
-          <a href="about.html">About Us</a>
-          <a href="sayur.html"style="color:#f2bb85;">Artikel</a>
-          <a href="contact.html">Contact Us</a>
-        </div>
-      </div>
-	</head>
-		<div style="color:black" class="wrapper">
-			<section class="courses">
-				<article>
-					<figure>
-						<img style="width:308px;height:245px"src="kemangi.jpg" alt="" />
-					</figure>
-					<hgroup>
-						<div class="atas">
-						<h2><b>Kemangi</b></h2>
-						</div>
-					</hgroup>
-          <div class="isi">
-					<p>Kemangi adalah salah satu jenis sayuran yang biasanya digunakan daunnya sebagai pelengkap dalam beberapa jenis masakan di Indonesia khususnya.
+    <div class="wrapper">
+      <section class="courses">
+        <article>
+          <figure>
+            <img style="width: 220px; height:210px" src="kemangi.jpg" alt="kemangi" />
+          </figure>
+          <hgroup>
+            <h2>Cara Menanam Seledri</h2>
+            <h3 style="color:#47b34f">Sayuran</h3>
+          </hgroup>
+                   <p>Kemangi adalah salah satu jenis sayuran yang biasanya digunakan daunnya sebagai pelengkap dalam beberapa jenis masakan di Indonesia khususnya.
           Daun kemangi mempunyai aroma khas yang diyakini dapat menambah cita rasa pada makanan.
 
           Menanam kemangi sangat mudah untuk dilakukan, penanaman bisa dilakukan di berbagai lahan, baik itu langsung ditanam di lahan, polybag maupun pot. Kemangi juga bisa ditanam di pekarangan rumah, sehingga anda dapat mencukupi kebutuhan kemangi untuk keluarga melalui tangan anda sendiri. Agar lebih sehat terutama untuk konsumsi pribadi, kemangi juga dapat ditanam secara organik.
@@ -59,22 +41,24 @@
         Perawatan tanaman kemangi selama penanaman hanya menggunakan pupuk organik cair (POC) dengan interval 2-3 minggu sekali bersamaan dengan penyiraman, dan tanpa tanpa menggunakan bahan kimia, sehingga lebih aman untuk dikonsumsi.
         Pemanenan dapat dilakukan kapan saja asalkan daun sudah mulai tumbuh subur, sehingga tanaman bisa memunculkan percabangan baru dan kembali rimbun.
         Demikian ulasan mengenai cara menanam kemangi, semoga artikel ini dapat menambah wawasan dan bermanfaat untuk anda.</p>
-      </div>
-       </article>
+        </article>    
       </section>
-        <div class="kaki">
-          <div class="logo2">
-            Belajar Tani
-          </div>
-          <div class="kontak">
-            <div class="kontak1">
-              © 2019 Farm Indonesia. All Rights Reserved.
-            <div class="info">
-              PT. Belajar Tani Agriteknologi Nusantara
-            </div>
-            </div>
-          </div>
-        </div>
-    </div>
+      <aside>
+        <section class="popular-recipes">
+          <h2> <a href="artikel.html" style="color:#db5656">Article</a></h2>
+          <a href="seledri.html">Cara Menanam Seledri</a>
+          <a href="bayam merah.html">Cara Menanam Bayam Merah di Polybag</a>
+          <a href="artik.html">Cara Menanam Pepaya di Pekarangan Rumah</a>
+          <a href="contact.html">Cara Menanam Kelengkeng Merah Dalam Pot</a>
+          <a href="contact.html">Pembibitan Anggur</a>
+          <a style="color:#db5656" href="kemangi.html">Cara Menanam Kemangi</a>
+        </section>
+      </aside>
+      <footer>
+        <p style="font-size: 40px">&nbsp Bercocok Tani</p>
+        <hr width="100%">
+        <p style="margin-top:18px;margin-left: 18px">© 2019 Farm Indonesia. All Rights Reserved. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp PT. Belajar Tani Agriteknologi Nusantara</p>
+      </footer>
+    </div><!-- .wrapper -->
   </body>
 </html>
