--- a/seledri.html
+++ b/seledri.html
@@ -1,42 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title></title>
+
+    <title>Artikel Belajar Tani</title>
     <link rel="stylesheet" href="kemangi.css">
   </head>
   <body>
-    <div class="all">
-      <div class="kepala">
-        <div class="Judul">
-          <p>
-            <img src="plants.png" alt="" style="left:700px;width:50px;height:50px;">
-            <a href="index.html">Bercocok Tani</a>
-          </p>
-        </div>
-        <div class="menu1">
-          <a href="index.html">Home</a>
-          <a href="about.html">About Us</a>
-          <a href="sayur.html"style="color:#f2bb85;">Artikel</a>
-          <a href="contact.html">Contact Us</a>
-        </div>
-      </div>
-	</head>
-		<div style="color:black" class="wrapper">
-			<section class="courses">
-				<article>
-					<figure>
-						<img style="width:308px;height:245px"src="kelengkeng.jpg" alt="" />
-					</figure>
-					<hgroup>
-						<div class="atas">
-						<h2><b>Seledri</b></h2>
-						</div>
-					</hgroup>
-          <div class="isi">
-					<p>
-          Tanaman seledri bisa diperbanyak dengan cara generatif maupun vegetatif. Perbanyakan generatif yaitu perbanyakan tanaman seledri dengan cara menyemai biji atau benih, sedangkan perbanyakan vegetatif yaitu perbanyakan tanaman seledri dengan anakan atau seledri muda yang tumbuh pada rumpun seledri dewasa.
-Perbanyakan vegetatif biasanya dilakukan pada budidaya seledri skala kecil, seperti banyak dilakukan oleh para pehoby karena dengan menanam anakan bisa lebih cepat panen dan tidak perlu melakukan proses penyemaian.
+    <div class="wrapper">
+      <section class="courses">
+        <article>
+          <figure>
+            <img style="width: 220px; height:210px" src="seledri.jpg" alt="seledri" />
+          </figure>
+          <hgroup>
+            <h2>Cara Menanam Seledri</h2>
+            <h3 style="color:#47b34f">Sayuran</h3>
+          </hgroup>
+          <p>Tanaman seledri bisa diperbanyak dengan cara generatif maupun vegetatif. Perbanyakan generatif yaitu perbanyakan tanaman seledri dengan cara menyemai biji atau benih, sedangkan perbanyakan vegetatif yaitu perbanyakan tanaman seledri dengan anakan atau seledri muda yang tumbuh pada rumpun seledri dewasa.
+          Perbanyakan vegetatif biasanya dilakukan pada budidaya seledri skala kecil, seperti banyak dilakukan oleh para pehoby karena dengan menanam anakan bisa lebih cepat panen dan tidak perlu melakukan proses penyemaian.
 Sedangkan jika menanam seledri dalam skala luas atau sebagai usaha, pilihan terbaik adalah perbanyakan generatif  yaitu dengan menyemai biji, karena dengan cara ini bisa mendapatkan benih seledri dalam jumlah banyak dengan mudah.
 Adapun cara menanam seledri adalah sebagai berikut :</p>
 <br><p>TAHAP PENYEMAIAN BENIH</p>
@@ -55,22 +36,26 @@ Berikan pupuk dasar pada bedengan menggunakan pupuk kandang sebanyak 1 kg/meter 
 <p>2.Tahap penanaman</p>
 <p>Siram bibit terlebih dahulu sebelum dipindah tanam tujuannya agar media mudah lepas dari tray semai dan proses pengambilan bibit menjadi lebih mudah.
 Penanaman dilakukan dengan mencongkel bibit dari tray semai beserta medianya dengan jarak tanam 20×20 cm. Untuk memudahkan penataan dalam penanaman, buatlah garis alur di atas bedengan. Jika bibit dalam satu lubang pot tray lebih dari satu, jangan dipisahkan terlebih dahulu, pemisahan dilakukan setelah tanaman tumbuh agak besar. Setelah selesai penanaman lakukan penyiraman, penyiraman selanjutnya dilakukan sebanyak 2 kali sehari, lakukan penyiraman secukupnya saja asal lembab.
-Demikian ulasan mengenai cara menanam seledri, semoga artikel ini dapat menambah wawasan dan bermanfaat untuk anda.</p>
-       </article>
+Demikian ulasan mengenai cara menanam seledri.</p></p>
+       
+        </article>    
       </section>
-        <div class="kaki">
-          <div class="logo2">
-            Belajar Tani
-          </div>
-          <div class="kontak">
-            <div class="kontak1">
-              © 2019 Farm Indonesia. All Rights Reserved.
-            <div class="info">
-              PT. Belajar Tani Agriteknologi Nusantara
-            </div>
-            </div>
-          </div>
-        </div>
-    </div>
+      <aside>
+        <section class="popular-recipes">
+          <h2> <a href="artikel.html" style="color:#db5656">Article</a></h2>
+          <a style="color:#db5656" href="seledri.html">Cara Menanam Seledri</a>
+          <a href="bayam merah.html">Cara Menanam Bayam Merah di Polybag</a>
+          <a href="pepaya.html">Cara Menanam Pepaya di Pekarangan Rumah</a>
+          <a href="kelengkeng.html">Cara Menanam Kelengkeng Merah Dalam Pot</a>
+          <a href="anggur.html">Pembibitan Anggur</a>
+          <a href="kemangi.html">Cara Menanam Kemangi</a>
+        </section>
+      </aside>
+      <footer>
+        <p style="font-size: 40px">&nbsp Bercocok Tani</p>
+        <hr width="100%">
+        <p style="margin-top:18px;margin-left: 18px">© 2019 Farm Indonesia. All Rights Reserved. &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp PT. Belajar Tani Agriteknologi Nusantara</p>
+      </footer>
+    </div><!-- .wrapper -->
   </body>
 </html>
