--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Bercocok Tani</title>
     <link rel="stylesheet" href="contact.css">
   </head>
   <body>
@@ -10,7 +10,6 @@
       <div class="kepala">
         <div class="Judul">
           <p>
-            <img src="plants.png" alt="" style="left:700px;width:50px;height:50px;">
             <a href="index.html">Bercocok Tani</a>
           </p>
         </div>
@@ -21,7 +20,9 @@
           <a href="contact.html" style="color:#f2bb85;">Contact Us</a>
         </div>
       </div>
-      <div class="kiri">
+
+      <div class="utama"> </div>
+       <div class="kiri">
         <p>
         <img src="address.png" alt="" style="float:left;width:42px;height:42px;">
         <h2><p>Alamat<p></h2>
@@ -30,16 +31,17 @@
        </p>
       <p>
         <img src="telephone.png" alt="" style="float:left;width:42px;height:42px;">
-        <h2><p>Telephone</p></h2>
+        <br><br><h2><p>Telephone</p></h2>
         <p>082331588737</p>
       </p>
       <p>
         <img src="gmail.png" alt="" style="float:left;width:42px;height:42px;">
-        <h2><p>G-Mail</p></h2>
+       <br><br> <h2><p>G-Mail</p></h2>
         <p>BelajarTani@gmail.com</p>
       </p>
         </div>
-        <div class="kaki">
+      </div>
+       <div class="kaki">
           <div class="logo2">
             Belajar Tani
           </div>
@@ -52,6 +54,21 @@
             </div>
           </div>
         </div>
-    </div>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
